[package]
name = "fuser-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compat = "0.2"
async-trait = "0.1"
fuser = "0.12"
log = "0.4"
pretty_env_logger = "0.4"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
