[workspace]
members = ["fuser-async", "fuser-datafusion", "rmk-detection", "rmk-cli"]
resolver = "2"

[workspace.dependencies]
thiserror = "1"
log = "0.4"
pretty_env_logger = "0.5"
anyhow = "1"

tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "fs",
    "time",
    "sync",
] }
