[workspace]
members = ["fuser_async", "rmk_device", "rmk_format", "fuser_opendal"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Matthieu Dartiguenave <matthieu@dartiguenave.me>"]
description = "Rmk fs"

[workspace.dependencies]
thiserror = "1"
log = "0.4"
pretty_env_logger = "0.5"
anyhow = "1"
lazy_static = "1"

serde = { version = "1", features = ["derive"] }
serde_with = "3"

toml = "0.7"
serde_json = "1"

tempfile = "3"

futures = "0.3"
async-trait = "0.1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "fs",
    "time",
    "sync",
    "tracing",
] }
