[package]
name = "fuser-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"

fuser = "0.12"

log = "0.4"
pretty_env_logger = "0.4"
thiserror = "1"
tokio = { version = "1", features = [

    "rt-multi-thread",
    "macros",
    "signal",
    "fs",
    "time",
    "sync",
] }

# [dev-dependencies]
tempfile = "3"
anyhow = "1.0.69"
libc = "0.2"
