[package]
name = "fuser-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"

fuser = { version = "0.12", features = ["serializable"] }

log.workspace = true
pretty_env_logger.workspace = true
thiserror.workspace = true

tokio.workspace = true

libc = "0.2"

[dev-dependencies]
tempfile = "3"
anyhow.workspace = true
