[package]
name = "fuser-datafusion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.65"
base64 = "0.21"
datafusion = "19"

fuser-async = { version = "*", path = "../fuser-async" }
itertools = "0.10"
lazy_static = "1"
log = "0.4"
pretty_env_logger = "0.4"

thiserror = "1"
tokio = { version = "1", features = [

    "rt-multi-thread",
    "macros",
    "signal",
    "fs",
    "time",
    "sync",
] }

[dev-dependencies]
anyhow = "1"
tempfile = "3"

[features]
large-binary = []
