[package]
name = "fuser-datafusion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.65"
base64 = "0.21"
datafusion = "25"

fuser-async = { version = "*", path = "../fuser-async" }
itertools = "0.10"
lazy_static = "1"

log.workspace = true
pretty_env_logger.workspace = true

thiserror.workspace = true

tokio.workspace = true

[dev-dependencies]
anyhow.workspace = true
tempfile = "3"

[features]
large-binary = []
