[package]
name = "fuser_async"

version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true

fuser = { version = "0.12", features = ["serializable"] }

log.workspace = true
pretty_env_logger.workspace = true
thiserror.workspace = true

tokio.workspace = true

libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
anyhow.workspace = true
