[package]
name = "fuser_datafusion"

version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.65"
base64 = "0.21"
datafusion = "25"

fuser_async = { version = "*", path = "../fuser_async" }
itertools = "0.10"
lazy_static = "1"

log.workspace = true
pretty_env_logger.workspace = true

thiserror.workspace = true

tokio.workspace = true

[dev-dependencies]
anyhow.workspace = true
tempfile = "3"

[features]
large-binary = []
