[package]
name = "fuser_opendal"

version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
pretty_env_logger.workspace = true
thiserror.workspace = true

tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

opendal = { version = "0.36", features = ["services-sftp"] }
fuser_async = { version = "0.1.0", path = "../fuser_async" }
bimap = "0.6"
parking_lot = "0.12"
tokio-console = "0.1.8"
console-subscriber = { version = "0.1", features = ["parking_lot"] }

[dev-dependencies]
anyhow.workspace = true
tempfile.workspace = true
