[package]
name = "rmk-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
pretty_env_logger.workspace = true
log.workspace = true
tokio.workspace = true

rmk-detection = { version = "0.1.0", path = "../rmk-detection" }
