[package]
name = "rmk_device"

version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.9.2"

anyhow.workspace = true
thiserror.workspace = true

log.workspace = true
pretty_env_logger.workspace = true

tokio.workspace = true
async-trait = "0.1"
futures = "0.3"

opendal = { version = "0.35", features = ["services-sftp"] }

lazy_static.workspace = true

serde = { version = "1", features = ["derive"] }
toml = "0.7"
serde_json = "1"

config = { version = "0.13", features = ["toml"] }
directories = "5.0.1"
