[package]
name = "rmk_device"

version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.9.2"

anyhow.workspace = true
thiserror.workspace = true

log.workspace = true
pretty_env_logger.workspace = true

tokio.workspace = true
async-trait.workspace = true
futures.workspace = true


opendal = { version = "0.38", features = ["services-sftp"] }

lazy_static.workspace = true

serde.workspace = true
toml.workspace = true
serde_json.workspace = true

config = { version = "0.13", features = ["toml"] }
directories = "5.0.1"

rmk_format = { version = "*", path = "../rmk_format" }
opendal-mount = { version = "0.1.0", path = "../../opendal-mount" }
