[package]
name = "rmk_format"

version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12.0"

nom = "7"

log.workspace = true
pretty_env_logger.workspace = true

anyhow.workspace = true
thiserror.workspace = true
