[package]
name = "rmk_format"

version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12"

nom = "7"
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true

log.workspace = true
pretty_env_logger.workspace = true

anyhow.workspace = true
thiserror.workspace = true
